# crane-controller

./: .coveragerc  .gitignore  .instructions.md  .prompt.md  CHANGELOG.md  CITATION.cff  README.rst  STYLEGUIDE.md  names.csv  pyproject.toml  pytest.ini  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: _test.yml  _test_future.yml
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  assurance.html  crane_controller.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
branch/main/_autosummary/: crane_controller.algorithm.AlgorithmAgent.html  crane_controller.algorithm.html  crane_controller.crane_factory.html  crane_controller.envs.controlled_crane_pendulum.AntiPendulumEnv.html  crane_controller.envs.controlled_crane_pendulum.html  crane_controller.envs.controlled_mobile_crane.Actions.html  crane_controller.envs.controlled_mobile_crane.ControlledCraneEnv.html  crane_controller.envs.controlled_mobile_crane.html  crane_controller.envs.html  crane_controller.ppo_agent.ProximalPolicyOptimizationAgent.html  crane_controller.ppo_agent.html  crane_controller.q_agent.QLearningAgent.html  crane_controller.q_agent.html  crane_controller.wrappers.clip_reward.ClipReward.html  crane_controller.wrappers.clip_reward.html  crane_controller.wrappers.discrete_actions.DiscreteActions.html  crane_controller.wrappers.discrete_actions.html  crane_controller.wrappers.html  crane_controller.wrappers.reacher_weighted_reward.ReacherRewardWrapper.html  crane_controller.wrappers.reacher_weighted_reward.html  crane_controller.wrappers.relative_position.RelativePosition.html  crane_controller.wrappers.relative_position.html
branch/main/_sources/: assurance.rst.txt  crane_controller.rst.txt
branch/main/_sources/_autosummary/: crane_controller.algorithm.AlgorithmAgent.rst.txt  crane_controller.algorithm.rst.txt  crane_controller.crane_factory.rst.txt  crane_controller.envs.controlled_crane_pendulum.AntiPendulumEnv.rst.txt  crane_controller.envs.controlled_crane_pendulum.rst.txt  crane_controller.envs.controlled_mobile_crane.Actions.rst.txt  crane_controller.envs.controlled_mobile_crane.ControlledCraneEnv.rst.txt  crane_controller.envs.controlled_mobile_crane.rst.txt  crane_controller.envs.rst.txt  crane_controller.ppo_agent.ProximalPolicyOptimizationAgent.rst.txt  crane_controller.ppo_agent.rst.txt  crane_controller.q_agent.QLearningAgent.rst.txt  crane_controller.q_agent.rst.txt  crane_controller.wrappers.clip_reward.ClipReward.rst.txt  crane_controller.wrappers.rst.txt  (+7 more)
docs/source/: api.rst  assurance.rst  conf.py  crane_controller.rst  index.rst  reward_comparison.md  reward_comparison_s5775.md
experiments/: baseline.yaml  hybrid_cv01.yaml  hybrid_cv01_disc_s42.yaml  hybrid_cv01_disc_s5775.yaml  hybrid_cv01_s42.yaml  hybrid_cv01_s5775.yaml  hybrid_cv01_tube.yaml  hybrid_cv01_tube_disc.yaml  hybrid_cv01_tube_disc_s42.yaml  hybrid_cv01_tube_pbrs.yaml  hybrid_t_min.yaml  sig_t_min.yaml
models/: hybrid_cv01_disc_s42_log.csv  hybrid_cv01_disc_s42_meta.json  hybrid_cv01_disc_s42_play_results.csv  hybrid_cv01_disc_s5775_log.csv  hybrid_cv01_disc_s5775_meta.json  hybrid_cv01_disc_s5775_play_results.csv  hybrid_cv01_s42_log.csv  hybrid_cv01_s42_meta.json  hybrid_cv01_s42_play_results.csv  hybrid_cv01_s5775_log.csv  hybrid_cv01_s5775_meta.json  hybrid_cv01_s5775_play_results.csv  hybrid_cv01_tube_disc_s42_log.csv  hybrid_cv01_tube_disc_s42_play_results.csv  hybrid_cv01_tube_s42_log.csv  hybrid_cv01_tube_s42_play_results.csv  ppo_hcv01_continuous_s42_meta.json  ppo_hcv01_continuous_s42_vecnorm.pkl  ppo_hcv01_continuous_s5775_meta.json  ppo_hcv01_continuous_s5775_vecnorm.pkl  ppo_hcv01_continuous_s827596_meta.json  ppo_hcv01_continuous_s827596_vecnorm.pkl  ppo_hcv01_continuous_s987_meta.json  ppo_hcv01_continuous_s987_vecnorm.pkl  ppo_hcv01_discrete_s42_meta.json  ppo_hcv01_discrete_s42_vecnorm.pkl  ppo_hcv01_discrete_s5775_meta.json  ppo_hcv01_discrete_s5775_vecnorm.pkl  ppo_hcv01_discrete_s827596_meta.json  ppo_hcv01_discrete_s827596_vecnorm.pkl  ppo_hcv01_discrete_s987_meta.json  ppo_hcv01_discrete_s987_vecnorm.pkl  q_anti-pendulum.json  q_anti-pendulum_2.json  q_pendulum.json  q_trained.json  sig_t_min_s42_log.csv  sig_t_min_s42_play_results.csv  sig_t_min_s5775_log.csv  sig_t_min_s5775_play_results.csv
plans/: .plan.md
plans/add-missing-docstrings/: plan-draft.md  plan.md
plans/add-type-hints/: plan-draft.md  plan.md
plans/add-type-stubs/: plan-draft.md  plan.md
plans/fix-mypy/: plan-draft.md  plan.md
plans/fix-pyright/: plan-draft.md  plan.md
plans/fix-ruff-check/: plan-draft.md  plan.md
plans/reformat-existing-docstrings/: plan-draft.md  plan.md
scripts/: __init__.py  analyse_q.py  play_ppo.py  play_q.py  plot_sweep.py  plot_training.py  train_ppo.py  train_q.py  use_q_ide.py
src/crane_controller/: __init__.py  algorithm.py  callbacks.py  crane_factory.py  experiment_config.py  ppo_agent.py  q_agent.py  reinforce_agent.py
src/crane_controller/envs/: __init__.py  cart_pole.py  controlled_crane_pendulum.py  controlled_mobile_crane.py  grid_world.py  simple_test_env.py
src/crane_controller/wrappers/: __init__.py  clip_reward.py  discrete_actions.py  reacher_weighted_reward.py  relative_position.py
stubs/matplotlib-stubs/: __init__.pyi  _axes.pyi  axes.pyi  figure.pyi  lines.pyi  pyplot.pyi  text.pyi
stubs/stable_baselines3-stubs/: __init__.pyi  ppo.pyi
stubs/stable_baselines3-stubs/common/: __init__.pyi  callbacks.pyi  env_util.pyi  evaluation.pyi  vec_env.pyi
stubs/torch-stubs/: __init__.pyi
stubs/torch-stubs/cuda/: __init__.pyi
stubs/torch-stubs/distributions/: __init__.pyi  normal.pyi
stubs/torch-stubs/nn/: __init__.pyi
stubs/torch-stubs/optim/: __init__.pyi
tests/: anti-pendulum - Copy.json  anti-pendulum.json  anti-pendulum_1.json  conftest.py  interval.json  pendulum.json  pendulum_1.json  test_algorithm.py  test_cartpole.py  test_crane_pendulum.py  test_environment.py  test_experiment_config.py  test_grid.py  test_ppo.py  test_q.py  test_simple_q_env.py
