[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["pkg_resources"]

[tool.hatch.build.targets.wheel]
    packages = ["src/crane_controller"]

[tool.hatch.metadata]
    allow-direct-references = true

[project]
    name = "crane_controller"
    version = "0.0.1"
    description = "AI-based controller of the crane."
    readme = "README.rst"
    requires-python = ">= 3.11"
    license = { file = "LICENSE" }
    authors = [
    { name = "Siegfried Eisinger", email = "Siegfried.Eisinger@dnv.com" },
    { name = "Henrik Stokland Berg", enail = "Henrik.Stokland.Berg@dnv.com" },
    { name = "Sebastian.Winter", email = "Sebastian.Winter@dnv.com" },
]
keywords = [
    "simulation",
    "model",
    "FMI",
    "OSP",
    "control algorithm",
]
dependencies = [
  "py-crane",
  "gymnasium",
  "matplotlib>=3.10.7",
  "numpy>=2.0",
  "scipy>=1.15.1",
  "pygame>=2.1.3",
  "pre-commit",
  "tqdm>=4.67.3",
  "pandas>=3.0.0",
  "seaborn>=0.13.2",
  "torch>=2.10.0",
  "stable-baselines3[extra]>=2.7.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6.3",
    "pyright>=1.1.378",
    "mypy>=1.11.1",
    "sourcery>=1.22",
    "pre-commit>=3.8",
    "Sphinx>=8.0",
    "sphinx-argparse-cli>=1.17",
    "sphinx-autodoc-typehints>=2.2",
    "sphinxcontrib-mermaid>=1.0.0",
    "myst-parser>=4.0",
    "furo>=2024.8",
]
native-tls = true

[tool.mypy]
plugins = []
mypy_path = "stubs"
files = [
    "src",
    "tests",
]
exclude = [
    "src/folder_to_be_excluded",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]

[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
]
exclude = [
    "tests/test_working_directory",
]
