[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "src/crane_controller",
    "scripts",
    "tests",
    ".coveragerc",
    ".editorconfig",
    ".pre-commit-config.yaml",
    "pyproject.toml",
    "pytest.ini",
    "ruff.toml",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/crane_controller",
]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "crane-controller"
version = "0.0.1"
description = "AI-based control of a crane system using reinforcement learning."
readme = "README.rst"
requires-python = ">= 3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Siegfried Eisinger", email = "siegfried.eisinger@dnv.com" },
    { name = "Aleksandar Babic", email = "aleksandar.babic@dnv.com" },
    { name = "Henrik Stokland Berg", email = "henrik.stokland.berg@dnv.com" },
    { name = "Sebastian Winter", email = "sebastian.winter@dnv.com" },
]
maintainers = [
    { name = "Claas Rostock", email = "claas.rostock@dnv.com" },
]
keywords = [
    "simulation",
    "model",
    "FMI",
    "OSP",
    "control algorithm",
    "crane",
    "anti-pendulum",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    # "Operating System :: MacOS",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "py-crane>=0.3.1",
    "numpy>=2.4",
    "scipy>=1.17.1",
    "pandas>=3.0",
    "torch==2.10.0",
    "gymnasium>=1.2.3",
    "pygame-ce>=2.5",  # replacement for pygame (transitive dependency of gymnasium)
    "stable-baselines3[extra]>=2.8",  # does not support Python 3.14 (By the time of writing, 2026-04-22)
    "matplotlib>=3.10",
    "seaborn>=0.13.2",
    "tqdm>=4.67",
]

[project.optional-dependencies]
cuda = [
    "torch==2.10.0+cu130",
]

[project.urls]
Homepage = "https://github.com/dnv-opensource/crane-controller"
Documentation = "https://dnv-opensource.github.io/crane-controller/README.html"
Repository = "https://github.com/dnv-opensource/crane-controller.git"
Issues = "https://github.com/dnv-opensource/crane-controller/issues"
Changelog = "https://github.com/dnv-opensource/crane-controller/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "ruff>=0.15.9",
    "pyright>=1.1.408",
    "mypy>=1.19.1",
    "sourcery>=1.43.0",
    "pre-commit>=4.5",
    "Sphinx>=9.0",
    "sphinx-argparse-cli>=1.21.3",
    "sphinx-autodoc-typehints>=3.6",
    "sphinxcontrib-mermaid>=2.0",
    "myst-parser>=5.0",
    "furo>=2025.12",
    "jupyter>=1.1.1",
    "nbconvert>=7.17",
    "pandas-stubs>=3.0",
    "scipy-stubs>=1.17.1",
]

[tool.uv]
default-groups = [
    "dev",
]
find-links = [
    "https://download.pytorch.org/whl/torch",
]
native-tls = true
required-environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
    # "sys_platform == 'darwin'",
]
override-dependencies = [
    # Problem: gymnasium requires pygame which does not have wheels for Python 3.14+
    # Solution: Force pygame-ce which is a compatible fork of pygame and has wheels for Python 3.14+.
    # Practical solution, though, is a bit of a hack and needs two parts:
    #     1) Add pygame-ce as dependency (as replacement for pygame).
    #     2) Remove pygame via override-dependencies here:
    "pygame; python_version < '0'",  # this will never be selected, effectively removing pygame
]


[tool.mypy]
plugins = []
mypy_path = "stubs"
files = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "src/folder_to_be_excluded",
]
check_untyped_defs = true
disable_error_code = [
    "misc",
    "import-untyped",
]


[tool.pyright]
stubPath = "stubs"
include = [
    "src",
    "tests",
    "demos",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    ".venv",
    "src/folder_to_be_excluded",
]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingParameterType = "error"
reportUnknownParameterType = "warning"
reportUnknownMemberType = "warning"                # consider to set to `false` if you work a lot with matplotlib and pandas, which are both not properly typed and known to trigger this warning
reportMissingTypeArgument = "error"
reportPropertyTypeMismatch = "error"
reportFunctionMemberAccess = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "warning"
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportMatchNotExhaustive = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
# Activate the following rules only locally and temporary, i.e. for a QA session.
# (For server side CI they are considered too strict.)
# reportMissingTypeStubs = true
# reportConstantRedefinition = "warning"
# reportImportCycles = "warning"
# reportImplicitStringConcatenation = "warning"
